tests/compile_fail/declare_scheduler_invisible_binary.stderr
error: declare_scheduler!: `binary` must contain at least one visible character (empty, whitespace-only, and invisible-only literals are rejected)
 --> tests/compile_fail/declare_scheduler_invisible_binary.rs:7:14
  |
7 |     binary = "\u{200B}\u{2060}",
  |              ^^^^^^^^^^^^^^^^^^
